# PICO-MPSSE

./: README.md
pico_mpsse/: CMakeLists.txt  README.md  config.h  jtag.pio  pico_mpsse.c  pico_mpsse.h  pio_jtag.c  pio_jtag.h  usb_common.h
usbmon/: README.md  ft232h_openfpgaloader_detect_t20_on_1_017.txt  usbmon_mpsse_parse.py
